# JunQiHelper

./: .gitignore  CMakeLists.txt  JunQiHelper.pro  JunQiHelper_zh_CN.ts  deploy.bat  mainwindow.cpp  mainwindow.h  mainwindow.ui  mouseclickdialog.cpp  mouseclickdialog.h  mouseclickdialog.ui
GlobalHook/: CMakeLists.txt  GlobalHook_global.h  globalhook.cpp  globalhook.h
